# testbed-environment

./: .gitignore  README.md  deploy_ad_qp.sh  report_csv.py  run_simulator.sh
agents_application/: .env  agents.py  chatbot.py  config.py
oran_system/: README.md  pyproject.toml  requirements.txt
oran_system/src/oran_system/: crew.py  main.py
oran_system/src/oran_system/config/: agents.yaml  tasks.yaml
oran_system/src/oran_system/tools/: custom_tool.py
wireless-network-simulator/: .gitignore  README.md  api.py  bs_config.json  requirments.txt  test.py  utils.py
wireless-network-simulator/cell_reports_csv/: cell_reports_step_0.csv  cell_reports_step_1.csv  cell_reports_step_10.csv  cell_reports_step_11.csv  cell_reports_step_12.csv  cell_reports_step_13.csv  cell_reports_step_14.csv  cell_reports_step_15.csv  cell_reports_step_16.csv  cell_reports_step_17.csv  cell_reports_step_18.csv  cell_reports_step_2.csv  cell_reports_step_21.csv  cell_reports_step_22.csv  cell_reports_step_23.csv  cell_reports_step_24.csv  cell_reports_step_25.csv  cell_reports_step_29.csv  cell_reports_step_3.csv  cell_reports_step_30.csv  cell_reports_step_31.csv  cell_reports_step_34.csv  cell_reports_step_35.csv  cell_reports_step_36.csv  cell_reports_step_37.csv  cell_reports_step_38.csv  cell_reports_step_4.csv  cell_reports_step_41.csv  cell_reports_step_42.csv  cell_reports_step_43.csv  cell_reports_step_45.csv  cell_reports_step_46.csv  cell_reports_step_49.csv  (+33 more)
wirter/: requirements.txt
writer/: README.md  deploy_xapps.sh  requirements.txt  run_simulator.sh  uninstall.sh
(+261 files in other folders)
